# ASACA-Automatic-Speech-Analysis-for-Cognitive-Assessment

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  app_V2.py  batch_test_V4.py  inference_V4.py  pyproject.toml  requirements-dev.txt  requirements.txt  torch_dll_utils.py  train.py  train_V2.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml
Models/: config.json  model.safetensors  preprocessor_config.json  rng_state.pth  scheduler.pt  tokenizer_config.json  trainer_state.json  vocab.json
asaca_cognition/: cognition_inference.py  dictionary_builder.py  feature_extractor.py  model_training_improved.py
cognition_training/: TUH_FV_Improved.xlsx  classifier.pkl
dicts/: AD_dict.xlsx  HC_dict.xlsx  MCI_dict.xlsx
docs/: index.md  installation.md  mkdocs.yml  reference.md  tutorials.md
epoch 27/: config.json
examples/: notebook_quick_demo.ipynb
examples/data/: README
notebooks/: quickstart.ipynb
speech_tools/: config.yaml  pause.py  syllable.py
src/asaca/: __init__.py  __main__.py  cli.py  gui.py  inference.py
src/asaca/cognition/: cognition_inference.py  feature_extractor.py
src/asaca/speech_tools/: diarize.py  praat_bridge.py
src/ctc_decoder/: __init__.py
