[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "asaca"
version         = "0.1.0"
description     = "Automatic Speech and Cognition Analysis (ASACA) – an end-to-end pipeline for clinical-grade neuro-cognitive speech biomarkers."
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "Apache-2.0" }
authors         = [
  { name = "Xinbo Yang", email = "xyang2@tcd.ie" }
]
keywords = [
  "speech-recognition", "wav2vec2", "cognitive-assessment",
  "neurocognitive-biomarkers", "ASR", "health-AI"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License"
]

dependencies = [
  "numpy==1.24.4",
  "pandas>=1.5",
  "scipy>=1.10",
  "joblib>=1.3",
  "tqdm>=4.66",
  "sympy>=1.12",
  "torch>=2.0",
  "torchaudio>=2.0",
  "scikit-learn>=1.4",
  "transformers>=4.38",
  "datasets>=2.18",
  "evaluate>=0.4",
  "safetensors>=0.4",
  "soundfile>=0.12",
  "librosa>=0.10",
  "resampy>=0.4",
  "ctc-segmentation>=1.7",
  "ctc-decoder @ git+https://github.com/githubharald/CTCDecoder.git@6b5c3dd",
  "webrtcvad",
  "praat-parselmouth>=0.4",
  "pronouncing>=0.2",
  "pyctcdecode>=0.5",
  "jiwer>=3.0",
  "pyannote.audio>=3.1",
  "pyannote.core>=5.0",
  "matplotlib>=3.7",
  "pillow>=10.2",
  "shap>=0.44",
  "psutil>=5.9",
  "openpyxl>=3.1",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
gui = ["PyQt5>=5.15", "pyqtgraph>=0.13", "reportlab>=4.0"]

dev = [
  "black", "ruff", "pytest", "pre-commit",
  "ctc-decoder @ git+https://github.com/githubharald/CTCDecoder.git@6b5c3dd"
]

[project.urls]
Homepage        = "https://github.com/ProfYang-2030/ASACA-Automatic-Speech-Analysis-for-Cognitive-Assessment"
Documentation   = "https://github.com/ProfYang-2030/ASACA-Automatic-Speech-Analysis-for-Cognitive-Assessment/wiki"
Source          = "https://github.com/ProfYang-2030/ASACA-Automatic-Speech-Analysis-for-Cognitive-Assessment"
Tracker         = "https://github.com/ProfYang-2030/ASACA-Automatic-Speech-Analysis-for-Cognitive-Assessment/issues"
